fix: alignment, button type

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .wrapper {
   position: relative;
+  margin: 0 auto;
   padding: 2rem;
   width: 42rem;
   height: 100vh;
